# MobileNetworkOperatorDemo

./: CLAUDE.md  CMakeLists.txt  README.md  clarify_questions.md  draft.md
.claude/commands/: clarify.md  design.md  document.md  implement.md  verify.md
app/demo/: CMakeLists.txt  main.cpp
docs/plans/: billing.md  billing.spec.md
lib/billing/: CLAUDE.md  CMakeLists.txt
lib/billing/include/billing/: BillingConfig.hpp  BillingEngine.hpp  CallResult.hpp  DateTime.hpp  SubscriberAccount.hpp
lib/billing/src/: BillingEngine.cpp
tests/: CLAUDE.md  CMakeLists.txt  test_billing.cpp
